# tidyviz

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  WORKFLOW.md  pyproject.toml
docs/: API.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  USER_GUIDE.md  USER_MANUAL.md
examples/: example_tidy.py  example_viz.py  sample_survey_data.csv
examples/outputs/: expanded_survey_data.csv  summary_statistics.csv  validated_survey_data.csv
src/tidyviz/: __init__.py
src/tidyviz.egg-info/: PKG-INFO
src/tidyviz/tidy/: reshape.py  validate.py
src/tidyviz/viz/: categorical.py  themes.py
tests/test_tidy/: test_reshape.py  test_validate.py
tests/test_viz/: test_categorical.py  test_themes.py
